# cli

./: .dockerignore  .gitignore  CNAME  CONTRIBUTING.md  Cargo.toml  HISTORY.md  LICENSE.txt  LLM.md  MANIFEST.in  NOTICE  README.md  install.js  install.sh  package-lock.json  package.json  pyproject.toml  pytest.ini
.github/: actionlint.yaml
.github/ISSUE_TEMPLATE/: issue.yml
.github/workflows/: docker-build-test.yml  docker-release.yml  issues.yml  pages.yml  release-matrix.yml  release.yml  rust-tests.yml  ubuntu-tests.yml  windows-tests.yml
aider/: args_formatter.py  commands.py  exceptions.py  help.py  history.py  linter.py  main.py  mdstream.py  repo.py  report.py  scrape.py  sendchat.py  watch.py
aider/coders/: architect_coder.py  help_coder.py  single_wholefile_func_coder.py  wholefile_func_coder.py
aider/queries/tree-sitter-languages/: README.md
aider/website/: index.md  install.ps1
aider/website/_data/: code-in-json.yml  deepseek-down.yml  o1_polyglot_leaderboard.yml  polyglot_leaderboard.yml  quant.yml
aider/website/_includes/: get-started.md  quant-chart.js  qwq-chart.js  replit-pipx.md  works-best.md
aider/website/_posts/: 2023-10-22-repomap.md  2023-11-06-benchmarks-1106.md  2024-05-02-browser.md  2024-05-22-swe-bench-lite.md  2024-06-02-main-swe-bench.md  2024-11-21-quantization.md  2024-12-21-polyglot.md  2025-01-28-deepseek-down.md
aider/website/docs/: git.md  llms.md  repomap.md
aider/website/docs/config/: editor.md  options.md  reasoning.md
aider/website/docs/llms/: azure.md  bedrock.md  cohere.md  groq.md  openai.md  vertex.md
aider/website/docs/more/: analytics.md
aider/website/docs/troubleshooting/: aider-not-found.md  edit-errors.md  imports.md  token-limits.md
aider/website/docs/usage/: browser.md  caching.md  commands.md  conventions.md  copypaste.md  modes.md
aider/website/examples/: chat-transcript-css.md  semantic-search-replace.md  update-docs.md
assets/themes/: dracula.json
assets/themes/claude/: alucard.json  dracula.json
benchmark/: Dockerfile  README.md  benchmark.py  docker.sh  docker_build.sh  over_time.py  plots.py  problem_stats.py  refactor_tools.py  rsync.sh  rungrid.py  swe-bench-lite.txt  swe-bench.txt  swe_bench.py  test_benchmark.py
crates/event/: Cargo.toml
crates/event/src/: lib.rs
dev/: __init__.py  analytics.py  args.py  copypaste.py  gui.py  io.py  llm.py  models.py  repomap.py  urls.py  utils.py  versioncheck.py  voice.py
dev/coders/: base_coder.py  editblock_coder.py  help_prompts.py  search_replace.py  wholefile_coder.py
dev/resources/: __init__.py
dev/website/: HISTORY.md  _config.yml  install.sh
dev/website/_data/: architect.yml  blame.yml  edit_leaderboard.yml  o1_results.yml  qwq.yml  r1_architect.yml  refactor_leaderboard.yml  sonnet-fine.yml
dev/website/_includes/: blame.md  get-started.md  head_custom.html  help-tip.md  help.md  model-warnings.md  nav_footer_custom.html  python-m-aider.md
dev/website/_posts/: 2023-05-25-ctags.md  2023-11-06-benchmarks-speed-1106.md  2023-12-21-unified-diffs.md  2024-01-25-benchmarks-0125.md  2024-03-08-claude-3.md  2024-04-09-gpt-4-turbo.md  2024-05-13-models-over-time.md  2024-05-22-linting.md  2024-05-24-self-assembly.md  2024-07-01-sonnet-not-lazy.md  2024-07-25-new-models.md  2024-08-14-code-in-json.md  2024-08-26-sonnet-seems-fine.md  2024-09-12-o1.md  2024-09-26-architect.md  2024-12-03-qwq.md  2025-01-15-uv.md  2025-01-24-r1-sonnet.md
dev/website/assets/: sample.aider.conf.yml  sample.env
dev/website/blog/: index.html
dev/website/docs/: benchmarks.md  config.md  faq.md  install.md  languages.md  more-info.md  scripting.md  troubleshooting.md  usage.md
dev/website/docs/config/: adv-model-settings.md  aider_conf.md  api-keys.md  dotenv.md  model-aliases.md
dev/website/docs/install/: codespaces.md  docker.md  optional.md
dev/website/docs/leaderboards/: by-release-date.md  contrib.md  edit.md  index.md  notes.md  refactor.md
dev/website/docs/legal/: contributor-agreement.md  privacy.md
dev/website/docs/llms/: anthropic.md  deepseek.md  gemini.md  lm-studio.md  ollama.md  openai-compat.md  openrouter.md  other.md  xai.md
dev/website/docs/more/: edit-formats.md  infinite-output.md
dev/website/examples/: 2048-game.md  README.md  add-test.md  asciinema.md  census.md  complex-change.md  css-exercises.md  hello-world-flask.md  hello.md  no-color.md  pong.md
dev/website/share/: index.md
docker/: Dockerfile
requirements/: requirements-browser.txt  requirements-dev.txt  requirements-help.txt  requirements-playwright.txt
scripts/: blame.py  history_prompts.py  issues.py  jekyll_run.sh  my_models.py  update-blame.sh  update-docs.sh  update-history.py  versionbump.py  yank-old-versions.py
spec/: openapi.json  products.json
src/: config.rs  http.rs  main.rs  private.rs  telemetry.rs
src/commands/: api.rs  billing.rs  build.rs  cluster.rs  commerce.rs  connector.rs  deploy.rs  dev.rs  init.rs  kms.rs  mod.rs  network.rs  node.rs  run.rs  share.rs  ts_proxy.rs  usage.rs  wallet.rs
src/commands/code/: backend.rs  claude.rs  context.rs  dev.rs  event.rs  http.rs  mod.rs  serve.rs  session.rs  settings.rs  target.rs  testmock.rs  theme.rs
src/commands/product/: generated.rs  mod.rs  tests.rs
src/iam/: identity.rs  login.rs  mod.rs  oauth.rs  onboarding.rs  paths.rs  pkce.rs  provider.rs  secret.rs  store.rs  token.rs
src/sdk/: go.rs  mod.rs  python.rs
tests/: cli.rs
tests/basic/: test_analytics.py  test_coder.py  test_commands.py  test_editblock.py  test_editor.py  test_exceptions.py  test_find_or_blocks.py  test_history.py  test_io.py  test_linter.py  test_main.py  test_models.py  test_repo.py  test_repomap.py  test_run_cmd.py  test_sanity_check_repo.py  test_scripting.py  test_sendchat.py  test_special.py  test_udiff.py  test_urls.py  test_voice.py  test_watch.py  test_wholefile.py
tests/browser/: test_browser.py
tests/fixtures/: chat-history-search-replace-gold.txt  chat-history.md  watch.js  watch.py  watch_question.js
tests/help/: test_help.py
tests/scrape/: test_scrape.py
(+9 files in other folders)
