[package]
name = "hanzo-cli"
version = "1.3.0"
edition = "2021"
authors = ["Hanzo AI"]
description = "Unified CLI for Hanzo AI development tools"
license = "MIT"
repository = "https://github.com/hanzoai/cli"

[[bin]]
name = "hanzo"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
tokio = { version = "1.36", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
dirs = "5.0"
colored = "2.1"
indicatif = "0.17"
dialoguer = "0.11"
reqwest = { version = "0.12", features = ["json", "gzip"] }
which = "6.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile = "3.10"
subprocess = "0.2"
chrono = { version = "0.4", features = ["serde"] }

# Cloud auth (HIP-0111 OIDC PKCE S256).
sha2 = "0.10"                                              # PKCE S256 challenge
base64 = "0.22"                                            # base64url (no pad)
rand = "0.8"                                               # OsRng for PKCE verifier + state + local wallet entropy
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }  # OS keychain — secrets NEVER hit disk
webbrowser = "1"                                           # open the IAM authorize URL

# Local / imported wallets — HD derivation + EVM address. Cloud-custody (KMS/MPC)
# wallets need NONE of this; these are only for offline `wallet create --local`
# and `wallet import`. Pure-Rust RustCrypto; secrets live in the OS keychain.
bip39 = { package = "tiny-bip39", version = "1" }             # BIP-39 mnemonic (all word counts) -> seed
bip32 = "0.5"                                             # secp256k1 BIP-32 HD derivation from a seed
k256 = "0.13"                                             # secp256k1 (matches bip32) — public key -> EVM address
sha3 = "0.10"                                             # Keccak-256 for EVM address

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
