[package]
name = "hanzo-event"
version = "0.1.0"
edition = "2021"
authors = ["Hanzo AI"]
description = "Canonical Event emitter — best-effort, privacy-respecting telemetry to the /v1/event front door"
license = "MIT"
repository = "https://github.com/hanzoai/cli"

[lib]
name = "hanzo_event"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
getrandom = "0.2"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
